--- a/src/components/DashbordChart.css
+++ b/src/components/DashbordChart.css
@@ -3,8 +3,10 @@
     padding: 20px;
     -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+    background-color: rgb(179, 179, 182);
   }
   
   .chartTitle {
     margin-bottom: 20px;
+    color: rgb(1, 1, 34);
   }
