--- a/src/components/DashbordInfo.css
+++ b/src/components/DashbordInfo.css
@@ -1,6 +1,7 @@
 .featured {
     width: 100%;
     display: flex;
+    margin-top: 20px;
     justify-content: space-between;
   }
   
@@ -9,6 +10,27 @@
     margin: 0px 20px;
     padding: 30px;
     border-radius: 10px;
+    background-color: rgb(84, 193, 243);
+    cursor: pointer;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  }
+  .featuredItem1 {
+    flex: 1;
+    margin: 0px 20px;
+    padding: 30px;
+    border-radius: 10px;
+    background-color: rgb(241, 70, 99);
+    cursor: pointer;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  }
+  .featuredItem2 {
+    flex: 1;
+    margin: 0px 20px;
+    padding: 30px;
+    border-radius: 10px;
+    background-color: rgb(131, 236, 82);
     cursor: pointer;
     -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
@@ -16,6 +38,7 @@
   
   .featuredTitle{
       font-size: 20px;
+
   }
   
   .featuredMoneyContainer{
@@ -47,5 +70,5 @@
   
   .featuredSub{
       font-size: 15px;
-      color: gray;
+      color: rgb(10, 2, 2);
   }
