--- a/src/components/css/Artworks.css
+++ b/src/components/css/Artworks.css
@@ -1,3 +1,15 @@
 .C {
     margin-top:20px;
 }
+.B{
+    margin-top: 50px;
+    margin-left: 500px;
+}
+.D{
+    margin-top: 50px;
+    margin-left: 500px;
+}
+.E{
+    margin-top: 50px;
+    margin-left: 500px;
+}
