--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -1,4 +1,181 @@
 .C {
     margin-top: 20px;
+    width:1200px;
+
 }
+.photo {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+.footercard {
+  background-color: black;
+  height:500px;
+  width: 24%;
+  float:left;
+  margin: 0.5%;
+
+}
+.footercard h1 {
+  color:white;
+  margin-left:50px;
+}
+.footercard h3 {
+  color:white;
+  margin-left:50px;
+}
+.footercard p {
+  color:white;
+  margin-left:50px;
+}
+.title{
+  margin-top: 100px;
+  margin-left: 650px;
+  font-style: italic;
+}
+.footer{
+  width: 100%;
+  height:500px;
+  background-color:black;
+}
+.Info {
+  margin-left:500px;
+  font-style: italic;
+  margin-right:200px;
+}
+.Infotools {
+  margin-top:50px;
+  margin-left:200px;
+  font-style: italic;
+  margin-right:200px;
+}
+.pencile {
+
+    margin-left: 100px;
+    object-fit:cover;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius:50%;
+    margin-top: 150px;
+    float:left;
+}
+.button {
+ 
+  background-color: #ec0d0d;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  margin-left: 300px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.text {
+  font-family: Copperplate, Papyrus, fantasy;
+}
+.all {
+  width:1200px;
+  height:200px;
+  margin-top:150px;
+  margin-bottom: 300px;
+}
+.all h1 {
+  font-family: "Brush Script MT", cursive;
+  font-size: 70px;
+  
+  text-shadow: 3px 3px #b3b1b1;
+}
+.pencilart {
+  width:1200px;
+  height:260px;
+  margin-top:20px;
+  background-color:rgb(184, 184, 181);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  
+}
+.pencilarts {
+  width:1200px;
+  height:300px;
+  margin-top:20px;
+  background-color:rgb(184, 184, 181);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  
+}
+.buy button {
+  background-color: #ec0d0d;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  
+}
+.buy {
+  float:right;
+  margin:20px;
+  
+}
+.Arts p {
+  margin: 20px;
+  float:left;
+}
+.Arts {
+  width: 20%;
+  height:260px;
+  margin: 20px;
+  float:left;
+  background-color:rgb(255, 255, 255);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.Art {
+  width: 20%;
+  height:220px;
+  margin: 20px;
+  float:left;
+  background-color:rgb(255, 255, 255);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.p {
+  margin-top : 20px;
+}
+
+
+
+
+  .XX {
+   
+   margin-top:100px;
+    box-shadow: 0 4px 8px 0 rgba(226, 11, 11, 0.2), 0 6px 20px 0 rgba(228, 13, 13, 0.19);
+    color:rgb(187, 9, 9);
+    position: relative;
+    animation: mymovels 4s infinite;
+  }
+  
+  @keyframes mymovels {
+    from {left: 800px;}
+    to {left: 100px;}
+  }
+  .XY {
+   
+    margin-top:100px;
+     box-shadow: 0 4px 8px 0 rgba(226, 11, 11, 0.2), 0 6px 20px 0 rgba(228, 13, 13, 0.19);
+     color:rgb(187, 9, 9);
+     position: relative;
+     animation: mymovel 4s infinite;
+   }
+   
+   @keyframes mymovel {
+     from {left: 800px;}
+     to {left: 100px;}
+   }
+ 
+
 
