--- a/src/components/css/Orders.css
+++ b/src/components/css/Orders.css
@@ -1,3 +1,58 @@
 .C {
     margin-top:20px;
 }
+.form{
+    display: flex;
+    width:800px;
+    height: 750px;
+    margin-left: 250px;
+    margin-top: 40px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    background-color: bisque;
+}
+.forminfo{
+    display: flex;
+    margin-top: 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+.forminfo label{
+    margin-top: 20px;
+    font-size: 18px;
+    float: left;
+}
+.forminfo input{
+    width: 300px;
+    height: 40px;
+    margin-top: 10px;
+    font-size: 17px;
+}
+.forminfo select{
+    width: 300px;
+    height: 40px;
+}
+
+.forminfo option{
+    font-size: 17px;
+}
+.forminfo button{
+    margin-top: 30px;
+    color: black;
+    margin-left: 0px;
+    background-color: beige;
+    opacity: 1;
+    border: 2px solid #555555;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 17px;
+    padding: 10px 30px;
+}
+.forminfo button:hover {
+    background-color: #555555;
+    color: white;
+  }
