--- a/src/components/pages/moderator/ModHomebtns.css
+++ b/src/components/pages/moderator/ModHomebtns.css
@@ -17,6 +17,7 @@
     height: 100px;
     flex: 1;
     margin: 0px 20px;
+    margin-top: 50px;
     padding: 30px;
     border-radius: 10px;
     background-color: rgb(242, 245, 241);
@@ -29,7 +30,7 @@
     background-color: brown;
     padding: 6px 18px;
     transition: all 0.3s ease-out;
-    background-color:rgb(236, 219, 84);
+    background-color:rgb(237, 247, 95);
     
     
     border-radius: 4px;
@@ -38,12 +39,12 @@
   }
   .container {
    background-image: url('../../../assests/home.png');
-   height: 500px;
    margin-left: 100px;
     margin-top: 20px;
     flex: 1;
     margin: 0px 20px;
     width: 1250px;
+    height: 500px;
     padding: 30px;
     border-radius: 0px;
     background-color: rgb(196, 136, 169);
@@ -52,7 +53,4 @@
     box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75)
 
   }
-  .itemcontainer{
-    padding: 30px;
-    margin-left: 40px;
-  }
+ 
