--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -7,6 +7,7 @@
     border-radius: 4px;
     outline: none;
     border: none;
+    float:right;
     font-size: 18px;
     color: #fff;
     cursor: pointer;
