--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -106,7 +106,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   
 }
-.pencilarts {
+.pencilarts1 {
   width:1200px;
   height:300px;
   margin-top:20px;
@@ -134,11 +134,11 @@
   margin:20px;
   
 }
-.Arts p {
+.Arts1 p {
   margin: 20px;
   float:left;
 }
-.Arts {
+.Arts1 {
   width: 20%;
   height:260px;
   margin: 20px;
