--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -83,7 +83,7 @@
   margin-left: 300px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.text {
+.text1 {
   font-family: Copperplate, Papyrus, fantasy;
 }
 .all {
@@ -105,7 +105,7 @@
   background-color:rgb(184, 184, 181);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   
-}
+}  
 .pencilarts1 {
   width:1200px;
   height:300px;
