--- a/src/components/css/Artworks.css
+++ b/src/components/css/Artworks.css
@@ -83,10 +83,11 @@
     transition: all 0.2s ease-out;
   }
   .footer{
-    width: 100%;
-    height:425px;
-    background-color:black;
-    margin-top: 1100px;;
+    clear: both;
+    position: relative;
+    height: 200px;
+    margin-top: -200px;
+
   }
   .footercard {
     background-color: black;
