--- a/src/components/css/Profile.css
+++ b/src/components/css/Profile.css
@@ -1,3 +1,86 @@
 .C {
-    margin-top:20px;
+  margin-top: 20px;
+}
+.profiletext {
+  margin-top: 100px;
+  float: left;
+}
+.profiledetails h2 {
+  margin-top: 80px;
+  margin-bottom: 50px;
+}
+.ArtistPortfolio {
+  width: 100%;
+  height: 200px;
+  background: red;
+  background-image: url("https://cdn.wallpapersafari.com/87/60/c3LYE7.jpg");
+}
+.profiledata {
+  margin-top: 100px;
+  background: rgb(255, 255, 255);
+  width: 40%;
+  height: 600px;
+  float: left;
+  margin-left: 90px;
+}
+.feild {
+  width: 90%;
+}
+.profiledetails {
+  margin-top: 100px;
+  background: rgb(255, 255, 255);
+  width: 48%;
+  height: 600px;
+  float: right;
+  margin-right: 90px;
+}
+.profiledata h3 {
+  width: 90%;
+}
+.artpagedata h1 {
+  margin-top: 600px;
+}
+.tags {
+  text-align: center;
+  padding: 20px 0px;
+  background-color: rgb(155, 155, 155);
+}
+
+.tag {
+  outline: none;
+  border: none;
+  color: rgb(12, 12, 12);
+  margin: 0px 10px;
+  background-color: transparent;
+  cursor: pointer;
+  background-image: none;
+}
+
+.active {
+  font-weight: bold;
+  border-bottom: 1px solid #eee;
+}
+
+.containerx {
+  width: 80%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+}
+.Appw {
+  margin-top: 100px;
+  height: 3000px;
+  width: 100%;
+}
+
+.image-card {
+  padding: 5px;
+  margin: 5px;
+
+  border-radius: 2px;
+}
+
+.image {
+  width: 100%;
 }
