--- a/src/components/css/Artworks.css
+++ b/src/components/css/Artworks.css
@@ -1,4 +1,7 @@
-.C {
+*{
+  margin: 0px;
+  padding: 0px;
+}.C {
     margin-top:20px;
 }
 .B{
@@ -13,36 +16,96 @@
     margin-top: 50px;
     margin-left: 500px;
 }
+/* .roww {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create two equal columns that sits next to each other */
+/* .columnn {
+  flex: 50%;
+  padding: 0 4px;
+}
+
+.columnn img {
+  margin-top: 8px;
+  vertical-align: middle;
+}  */
+
+.cards{
+  width: 30%;
+  display: inline-block;
+  background-color: white;
+  border-radius: 5px;
+  margin: 20px;
+  
+  box-shadow: 2px 2px 10px black;
+}
+.image img{
+  width: 100%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;;
+}
+.artname{
+  text-align: center;
+}
+.cardbody{
+  text-align: center;
+  
+  padding: 4px;
+}
+.cardbody button{
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 150px;
+  height: 40px;
+  font-size: 16px;
+  background-color: white;
+  border: 1px solid black;
+  padding: 5px;
+  border-radius: 5px;
+}
+.cardbody button:hover{
+  background-color: black;
+  color: white;
+  transition: .5s;
+}
 .Arts{
-    width: 30%;
-    height: 300px;
+    width: 1000px;
+    height: 500px;
     margin-left: 20px;
     margin: 20px;
     float: left;
     background-color:beige;
     
   }
-  .img img{
+  .img{
       margin-left: 5px;
       margin-top: 5px;
-      width: 400px;
-      height:180px;
+      width: 600px;
+      height: 200px;
   }
-  .name{
-      margin-left: 35px;
-      margin-top: 6px;
+  .cardbody .name{
+    text-align: center;
       font-weight: 600;
-      font-size: 17px;
+      font-size: 22px;
   }
-  .des{
+  .cardbody .categ{
+    text-align: center;
       font-size: 13px;
-      margin-left: 35px;
-      margin-top: 5px;
+      
   }
-  .price{
+  .cardbody .artist{
+    text-align: center;
+    font-size: 17px;
+    margin-top: 10px;
+  }
+  .cardbody .price{
+    text-align: center;
     font-size: 15px;
     margin-top:5px;
-    margin-left: 310px;
+    
 }
 .but{
     margin-top: 0px;
@@ -71,23 +134,25 @@
   .nav .item{
       margin-top: 6px;
       font-size: 20px;
-      float: left;
       width: 150px;
-      color: black;
+      float: left;
+      color: white;
       margin-left: 100px;
   }
+  .nav-links{
+    color:white;
+  }
   
-  .nav-links:hover {
+  /* .nav-links:hover {
     background-color:black;
     border-radius: 4px;
     transition: all 0.2s ease-out;
-  }
+  } */
   .footer{
-    clear: both;
-    position: relative;
-    height: 200px;
-    margin-top: -200px;
-
+    width: 100%;
+    height:425px;
+    background-color:black;
+    margin-top: 1100px;;
   }
   .footercard {
     background-color: black;
