--- a/src/components/css/Pencilarts.css
+++ b/src/components/css/Pencilarts.css
@@ -1,3 +1,21 @@
 .C {
-    margin-top:20px;
+  margin-top: 20px;
+}
+.commitionbac {
+  background-image: url("https://wallpaperaccess.com/full/1713248.jpg");
+  width: 100%;
+  background-color: #cccccc;
+  height: 300px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.del {
+  position: absolute;
+  top: 70%;
+  left: 10%;
+  text-shadow: 4px 4px 8px #2b2b2b;
+  transform: translate(-50%, -50%);
+  color: white;
 }
