--- a/src/components/DashbordData2.css
+++ b/src/components/DashbordData2.css
@@ -43,7 +43,21 @@
   cursor: pointer;
 }
 
-.widgetSmIcon {
-  font-size: 16px !important;
-  margin-right: 5px;
+.widgetSmUsername {
+  font-weight: 600;
+}
+
+.widgetSmUserTitle {
+  font-weight: 300;
+}
+
+.widgetSmButton {
+  display: flex;
+  align-items: center;
+  border: none;
+  border-radius: 10px;
+  padding: 7px 10px;
+  background-color: #eeeef7;
+  color: #555;
+  cursor: pointer;
 }
