--- a/src/components/DashbordData.css
+++ b/src/components/DashbordData.css
@@ -1,59 +1,65 @@
 .widgetLg {
-    flex: 2;
-    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-    padding: 20px;
-  }
-  
-  .widgetLgTitle {
-    font-size: 22px;
-    font-weight: 600;
-  }
-  
-  .widgetLgTable{
-    width: 100%;
-    border-spacing: 20px;
-  }
-  
-  .widgetLgTh{
-    text-align: left;
-  }
-  
-  .widgetLgUser{
-    display: flex;
-    align-items: center;
-    font-weight: 600;
-  }
-  
-  .widgetLgImg {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 10px;
-  }
-  
-  .widgetLgDate,.widgetLgAmount{
-    font-weight: 300;
-  }
-  
-  .widgetLgButton {
-    padding: 5px 7px;
-    border: none;
-    border-radius: 10px;
-  }
-  
-  .widgetLgButton.Approved{
-      background-color: #e5faf2;
-      color: #3bb077;
-  }
-  .widgetLgButton.Declined{
-      background-color: #fff0f1;
-      color: #d95087;
-  
-  }
-  .widgetLgButton.Pending{
-      background-color: #ebf1fe;
-      color: #2a7ade;
-  
-  }
+  flex: 2;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  padding: 20px;
+}
+.widgetSm {
+  width: 45%;
+}
+.titlem {
+  font-size: 20px;
+  margin-bottom: 20px;
+  color: rgba(48, 46, 46, 0.75);
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+.Artist td {
+  border: 1px solid rgb(187, 184, 184);
+  padding: 10px;
+}
+.show {
+  padding: 20px;
+  color: seashell;
+  background-color: rgb(112, 110, 110);
+  border-radius: 5px;
+  border: none;
+}
+
+.widgetLgUser {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+}
+
+.widgetLgImg {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
+}
+
+.widgetLgDate,
+.widgetLgAmount {
+  font-weight: 300;
+}
+
+.widgetLgButton {
+  padding: 5px 7px;
+  border: none;
+  border-radius: 10px;
+}
+
+.widgetLgButton.Approved {
+  background-color: #e5faf2;
+  color: #3bb077;
+}
+.widgetLgButton.Declined {
+  background-color: #fff0f1;
+  color: #d95087;
+}
+.widgetLgButton.Pending {
+  background-color: #ebf1fe;
+  color: #2a7ade;
+}
