--- a/src/components/DashbordData.css
+++ b/src/components/DashbordData.css
@@ -44,16 +44,15 @@
 .widgetLgAmount {
   font-weight: 300;
 }
-
-.widgetLgButton {
-  padding: 5px 7px;
-  border: none;
-  border-radius: 10px;
+.Artist th {
+  border: 1px solid rgb(187, 184, 184);
+  padding: 10px;
+  color: rgb(83, 83, 83);
 }
+.AB h1 {
+  margin-top: 30px;
 
-.widgetLgButton.Approved {
-  background-color: #e5faf2;
-  color: #3bb077;
+  text-shadow: 3px 3px #c2b4b4;
 }
 .widgetLgButton.Declined {
   background-color: #fff0f1;
