--- a/src/components/css/ArtworkDetail.css
+++ b/src/components/css/ArtworkDetail.css
@@ -1,21 +1,77 @@
+.imageanddetail::after{
+    content: "";
+  display: table;
+  clear: both;
+}
+.imagedetailrow{
+    float: left;
+  width: 50%;
+  padding: 10px;
+  height: 300px;
+}
+* {
+    box-sizing: border-box;
+  }
+  
+.artdetail{
+   margin-top: 20px;
+   margin-left: 80px;
+}
+
 .detailimg{
     width:600px;
-    margin-left: 120px;
+    margin-left: 80px;
     margin-top: 100px;
     float: left;
 }
-.proname{
+.prodes{
     float: left;
-    margin-left: 100px;
-    margin-top: 80px;
+    margin-left: 90px;
+    margin-right: 100px;
+    margin-top: 50px;
     font-size: 18px;
    
+}
+.proname{
+    float: left;
+    margin-left: 90px;
+     margin-right: 100px;
+    margin-top: 100px;
+    font-size: 25px;
+   
+}
+.prodim{
+    float: left;
+    margin-left: 90px;
+    margin-right: 100px;
+    margin-top: 30px;
+    font-size: 18px;
+   
+}
+.prodimquan{
+    
+    float: left;
+    margin-left: 90px;
+    margin-right: 100px;
+    margin-top: 30px;
+    font-size: 18px;
+   
+}
+.prodimquan input{
+    width : 100px;
+    height: 38px;
+    font-size: 19px;
+    text-align: center;
 }
 .detailimg2{
     width:100px;
     
     margin-top: 40px;
     float: left;
+}
+.district{
+    width: 200px;
+    font-size: 17px;
 }
 .detailimg3{
     width:100px;
@@ -39,5 +95,17 @@
 }
 .cartbtn{
     float: left;
-    margin-top: 80px;
+    background-color: white;
+    color: black;
+    margin-left: 230px;
+    margin-top: 100px;
+    width: 150px;
+    height: 38px;
+    font-size: 18px;
+    border: 2px solid #555555;
+    border-radius: 8px;
+}
+.cartbtn:hover{
+    background-color: rosybrown;
+    color: black;
 }
