--- a/src/components/css/CartTable.css
+++ b/src/components/css/CartTable.css
@@ -1,9 +1,80 @@
 .carttable{
-    font-family: Arial, Helvetica, sans-serif;
-  
-  width: 80%;
-  margin-top: 50px;
-  margin-left: 50px;
+    font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 90%;
+  margin-left: 60px;
+  margin-top: 30px;
+}
+.td{
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+.td1{
+  width: 420px;
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+.th1{
+  width: 378px;
+  text-align: center;
+  padding: 8px;
+  border-collapse: collapse;
+}
+.td2{
+  width: 220px;
+  border: 1px solid #dddddd;
+  text-align: center;
+  padding: 8px;
+}
+.th2{
+  width: 205px;
+  border-collapse: collapse;
+  text-align: center;
+  padding: 8px;
+}
+.td3{
+  width: 200px;
+  border: 1px solid #dddddd;
+  text-align: center;
+  padding: 8px;
+}
+.th3{
+  width: 186px;
+  border-collapse: collapse;
+  text-align: center;
+  padding: 8px;
+}
+.td5{
+  width: 130px;
+  border: 1px solid #dddddd;
+  text-align: center;
+  padding: 8px;
+}
+.th5{
+  width: 120px;
+  border-collapse: collapse;
+  text-align: center;
+  padding: 8px;
+}
+.td6{
+  width: 175px;
+  border: 1px solid #dddddd;
+  text-align: center;
+  padding: 8px;
+}
+.th6{
+  width: 160px;
+  border-collapse: collapse;
+  text-align: center;
+  padding: 8px;
+}
+.td4{
+  width: 185px;
+  border: 1px solid #dddddd;
+  text-align: center;
+  padding: 8px;
 }
 .carthead{
     margin-left: 60px;
@@ -30,6 +101,15 @@
   text-align: center;
   height: 40px;
   
+}
+.cartrow{
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width : 1000px;
+  border: 1px solid black;
+  text-align: center;
+  height: 40px;
+  margin-left: 10px;
 }
 .continue{
     margin-left: 80px;
