--- a/src/components/DashbordInfo.css
+++ b/src/components/DashbordInfo.css
@@ -1,74 +1,80 @@
 .featured {
-    width: 100%;
-    display: flex;
-    margin-top: 20px;
-    justify-content: space-between;
-  }
-  
-  .featuredItem {
-    flex: 1;
-    margin: 0px 20px;
-    padding: 30px;
-    border-radius: 10px;
-    background-color: rgb(84, 193, 243);
-    cursor: pointer;
-    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-  }
-  .featuredItem1 {
-    flex: 1;
-    margin: 0px 20px;
-    padding: 30px;
-    border-radius: 10px;
-    background-color: rgb(131, 236, 82);
-    cursor: pointer;
-    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-  }
-  .featuredItem2 {
-    flex: 1;
-    margin: 0px 20px;
-    padding: 30px;
-    border-radius: 10px;
-    background-color: rgb(241, 70, 99);
-    cursor: pointer;
-    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-  }
-  
-  .featuredTitle{
-      font-size: 20px;
+  width: 100%;
+  display: flex;
+  margin-top: 20px;
+  justify-content: space-between;
+}
+.repobtn {
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  background-color: rgb(88, 29, 41);
+}
 
-  }
-  
-  .featuredMoneyContainer{
-      margin: 10px 0px;
-      display: flex;
-      align-items: center;
-  }
-  
-  .featuredMoney{
-      font-size: 30px;
-      font-weight: 600;
-  }
-  
-  .featuredMoneyRate{
-      display: flex;
-      align-items: center;
-      margin-left: 20px;
-  }
-  
-  .featuredIcon{
-      font-size: 14px;
-      margin-left: 5px;
-      color: green;
-  }
-  
-  .featuredIcon.negative{
-      color: red;
-  }
-  
-  .featuredSub{
-      font-size: 15px;
-      color: rgb(10, 2, 2);
-  }
+.featuredItem {
+  flex: 1;
+  margin: 0px 20px;
+  padding: 30px;
+  border-radius: 10px;
+  background-color: rgb(84, 193, 243);
+  cursor: pointer;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+}
+.featuredItem1 {
+  flex: 1;
+  margin: 0px 20px;
+  padding: 30px;
+  border-radius: 10px;
+  background-color: rgb(131, 236, 82);
+  cursor: pointer;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+}
+.featuredItem2 {
+  flex: 1;
+  margin: 0px 20px;
+  padding: 30px;
+  border-radius: 10px;
+  background-color: rgb(241, 70, 99);
+  cursor: pointer;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+}
+
+.featuredTitle {
+  font-size: 20px;
+}
+
+.featuredMoneyContainer {
+  margin: 10px 0px;
+  display: flex;
+  align-items: center;
+}
+
+.featuredMoney {
+  font-size: 30px;
+  font-weight: 600;
+}
+
+.featuredMoneyRate {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.featuredIcon {
+  font-size: 14px;
+  margin-left: 5px;
+  color: green;
+}
+
+.featuredIcon.negative {
+  color: red;
+}
+
+.featuredSub {
+  font-size: 15px;
+  color: rgb(10, 2, 2);
+}
