--- a/src/components/pages/moderator/ModHomebtns.css
+++ b/src/components/pages/moderator/ModHomebtns.css
@@ -38,14 +38,14 @@
     transition: all 0.3s ease-out;
   }
   .container {
-   background-image: url('../../../assests/home.png');
-   margin-left: 100px;
+   /* background-image: url('../../../assests/home.png'); */
+   /* margin-left: 100px; */
     margin-top: 20px;
     flex: 1;
-    margin: 0px 20px;
-    width: 1250px;
-    height: 500px;
-    padding: 30px;
+    margin: 0px 0px;
+    width: 1350px;
+    height: 600px;
+    /* padding: 30px; */
     border-radius: 0px;
     background-color: rgb(196, 136, 169);
     cursor: pointer;
