--- a/src/components/css/moderator/ManageTool.css
+++ b/src/components/css/moderator/ManageTool.css
@@ -10,7 +10,7 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    background-color: bisque;
+    background-color: rgb(197, 194, 190);
 }
 .uploadforminfo{
     display: flex;
