--- a/src/components/css/ArtworkDetail.css
+++ b/src/components/css/ArtworkDetail.css
@@ -40,6 +40,14 @@
     font-size: 25px;
    
 }
+.proquantity{
+    float: left;
+    margin-left: 90px;
+     margin-right: 100px;
+    margin-top: 40px;
+    font-size: 20px;
+   
+}
 .prodim{
     float: left;
     margin-left: 90px;
@@ -53,7 +61,7 @@
     float: left;
     margin-left: 90px;
     margin-right: 100px;
-    margin-top: 30px;
+    margin-top: 50px;
     font-size: 18px;
    
 }
