--- a/src/components/css/Checkout.css
+++ b/src/components/css/Checkout.css
@@ -9,6 +9,13 @@
       font-size: 24px;
       margin-left: 150px;
   }
+  .orderdetails{
+    border-collapse: collapse;
+    width: 50%;
+    margin-top: 70px;
+    margin-left: 100px;
+    font-size: 18px;
+  }
   h1{
 
     padding:10px;
