--- a/src/components/css/Orders.css
+++ b/src/components/css/Orders.css
@@ -1,24 +1,34 @@
-.C {
-    margin-top:20px;
+.Artform {
+  background-color: rgb(184, 184, 184);
 }
-.uploadform{
-    display: flex;
-    width:800px;
-    height: 1500px;
-    margin-left: 250px;
-    margin-top: 100px;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    background-color: bisque;
+
+.uploadform {
+  display: flex;
+  width: 800px;
+  height: 1500px;
+  margin-left: 250px;
+  margin-top: 10px;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid grey;
 }
-.uploadforminfo{
-    display: flex;
-    margin-top: 0px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    
+.buttony {
+  color: rgb(51, 51, 51);
+  background-color: white;
+  border: 1px solid grey;
+  margin-top: 10px;
+  margin-left: 50px;
+  padding: 10px;
+  float: left;
+}
+.uploadforminfo {
+  display: flex;
+  margin-top: 0px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 /* .category {
     
@@ -32,122 +42,123 @@
     -ms-user-select: none;
     user-select: none;
   } */
-.uploadforminfo input[type=text] {
-    padding:5px; 
-    border:2px solid #ccc; 
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    margin-left: 60px;
-    width: 360px;
-    height: 50px;
+.uploadforminfo input[type="text"] {
+  padding: 5px;
+  border: 1px solid rgb(61, 61, 61);
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  margin-left: 60px;
+  width: 360px;
+  height: 50px;
 }
-.uploadforminfo input[type=radio] {
-    padding:1px; 
-    display: inline-block;
-    border:2px solid #ccc; 
-    margin-top: 0px;
-    border-radius: 5px;
-    margin-left: 20px;
-    width: 100px;
-    height: 25px;
-    background-color: black;
-    color: black;
-    
+.district {
+  border: 1px solid grey;
+  height: 100px;
+  width: 500px;
 }
-.uploadforminfo input[type=textarea] {
-    padding:5px; 
-    border:2px solid #ccc; 
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    margin-left: 35px;
-    width: 360px;
-    height: 50px;
+.uploadforminfo input[type="radio"] {
+  padding: 1px;
+  display: inline-block;
+  border: 1px solid rgb(66, 66, 66);
+  margin-top: 0px;
+  border-radius: 5px;
+  margin-left: 20px;
+  width: 100px;
+  height: 25px;
+  background-color: black;
+  color: black;
 }
-.uploadforminfo input[type=file] {
-    padding:5px; 
-    border:2px solid #ccc; 
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    align-items: center;
-    margin-top: 20px;
-    margin-left: 60px;
-    width: 350px;
-    height: 50px;
+.uploadforminfo input[type="textarea"] {
+  padding: 5px;
+  border: 2px solid #ccc;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  margin-left: 35px;
+  width: 360px;
+  height: 50px;
+}
+.uploadforminfo input[type="file"] {
+  padding: 5px;
+  border: 2px solid #ccc;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  align-items: center;
+  margin-top: 20px;
+  margin-left: 60px;
+  width: 350px;
+  height: 50px;
 }
 .uploadforminfo textarea {
-    padding:5px; 
-    border:2px solid #ccc; 
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    align-items: center;
-    margin-top: 20px;
-    width: 400px;
-    
+  padding: 5px;
+  border: 2px solid #ccc;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  align-items: center;
+  margin-top: 20px;
+  width: 400px;
 }
-.cate{
-    margin-top: 1000px;
-   
-    margin-left: -200px;
-    width: 400px;
-   
-    align-items: center;
+.cate {
+  margin-top: 1000px;
+
+  margin-left: -200px;
+  width: 400px;
+
+  align-items: center;
 }
-.category{
-    margin-top: 1000px;
-   
-    margin-left: 200px;
-    width: 400px;
-   
-    align-items: center;
+.category {
+  margin-top: 1000px;
+
+  margin-left: 200px;
+  width: 400px;
+
+  align-items: center;
 }
-.file{
-   
-    margin-top: 800px;
-   
-    margin-left: 100px;
-    width: 400px;
-   
-    align-items: center;
+.file {
+  margin-top: 800px;
+
+  margin-left: 100px;
+  width: 400px;
+
+  align-items: center;
 }
-.uploadforminfo .heading{
-    
-    margin-top: 5px;
-    
-    align-items: center;
+.uploadforminfo .heading {
+  margin-top: 5px;
+
+  align-items: center;
 }
-.uploadforminfo label{
-    margin-top: 20px;
-    font-size: 18px;
-    float: left;
+.uploadforminfo label {
+  margin-top: 20px;
+  font-size: 18px;
+  float: left;
 }
-.uploadforminfo input{
-    width: 300px;
-    height: 40px;
-    margin-top: 10px;
-    font-size: 17px;
+.uploadforminfo input {
+  width: 300px;
+  height: 40px;
+  margin-top: 10px;
+  font-size: 17px;
 }
-.uploadforminfo select{
-    width: 300px;
-    height: 40px;
+.uploadforminfo select {
+  width: 300px;
+  height: 40px;
 }
 
-.uploadforminfo option{
-    font-size: 17px;
+.uploadforminfo option {
+  font-size: 17px;
 }
-.uploadforminfo button{
-    margin-top: 30px;
-    color: black;
-    margin-left: 0px;
-    background-color: beige;
-    opacity: 1;
-    border: 2px solid #555555;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 17px;
-    padding: 10px 30px;
+.uploadforminfo button {
+  margin-top: 30px;
+  color: black;
+  margin-left: 0px;
+  background-color: rgb(255, 255, 255);
+  opacity: 1;
+  border: 2px solid #555555;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 17px;
+  padding: 10px 30px;
 }
 .uploadforminfo button:hover {
-    background-color: #555555;
-    color: white;
-  }
+  background-color: #555555;
+  color: white;
+}
