--- a/src/components/pages/moderator/ModHomebtns.css
+++ b/src/components/pages/moderator/ModHomebtns.css
@@ -1,56 +1,61 @@
+.btn {
+  padding: 8px 20px;
+  border-radius: 4px;
 
-  
-  .btn {
-    padding: 8px 20px;
-    border-radius: 4px;
- 
-    outline: none;
-    border: none;
-    font-size: 18px;
-    color: rgb(151, 34, 34);
-    cursor: pointer;
-    background-color: var(--primary);
-  }
-  .helpcenterbtn {
-   font-size: 25px;
-    width: 300px;
-    height: 100px;
-    flex: 1;
-    margin: 0px 20px;
-    margin-top: 50px;
-    padding: 30px;
-    border-radius: 10px;
-    background-color: rgb(242, 245, 241);
-    cursor: pointer;
-    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-  }
-  
-  .helpcenterbtn:hover {
-    background-color: brown;
-    padding: 6px 18px;
-    transition: all 0.3s ease-out;
-    background-color:rgb(237, 247, 95);
-    
-    
-    border-radius: 4px;
-    border: 2px solid var(--primary);
-    transition: all 0.3s ease-out;
-  }
-  .container {
-   /* background-image: url('../../../assests/home.png'); */
-   /* margin-left: 100px; */
-    margin-top: 20px;
-    flex: 1;
-    margin: 0px 0px;
-    width: 1350px;
-    height: 600px;
-    /* padding: 30px; */
-    border-radius: 0px;
-    background-color: rgb(196, 136, 169);
-    cursor: pointer;
-    -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75)
+  outline: none;
+  border: none;
+  font-size: 18px;
+  color: rgb(151, 34, 34);
+  cursor: pointer;
+  background-color: var(--primary);
+}
+.helpcenterbtn {
+  font-size: 25px;
+  width: 300px;
+  height: 100px;
+  flex: 1;
+  margin: 0px 20px;
+  margin-top: 50px;
+  padding: 30px;
+  border-radius: 10px;
+  background-color: rgb(242, 245, 241);
+  cursor: pointer;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+}
 
-  }
- 
+.helpcenterbtn:hover {
+  background-color: brown;
+  padding: 6px 18px;
+  transition: all 0.3s ease-out;
+  /* background-color: rgb(237, 247, 95);*/
+  background-color: crimson;
+
+  border-radius: 4px;
+  border-color: rgb(83, 220, 20);
+  border: 2px solid var(--primary);
+  transition: all 0.3s ease-out;
+}
+.container {
+  /* background-image: url('../../../assests/home.png'); */
+  /* margin-left: 100px; */
+  margin-top: 100px;
+  flex: 1;
+  margin: 0px 0px;
+  width: 1350px;
+  height: 600px;
+  /* padding: 30px; */
+  border-radius: 0px;
+  background-color: rgb(202, 188, 196);
+  cursor: pointer;
+  -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+}
+
+.upperdiv {
+  flex: 1;
+  margin: 0px 0px;
+  width: 1350px;
+  height: 100px;
+  background-color: rgb(255, 255, 255);
+}
