--- a/src/components/pages/moderator/ModHomebtns.css
+++ b/src/components/pages/moderator/ModHomebtns.css
@@ -26,6 +26,7 @@
 
 .helpcenterbtn:hover {
   background-color: brown;
+  color: white;
   padding: 6px 18px;
   transition: all 0.3s ease-out;
   /* background-color: rgb(237, 247, 95);*/
