--- a/src/components/pages/moderator/HelpCenterHomeInfo.css
+++ b/src/components/pages/moderator/HelpCenterHomeInfo.css
@@ -1,5 +1,8 @@
 .helpcontainer {
-  /* background-image: url("../../../assests/helpcenterhome.jpg");
+  background-image: url("../../../assests/helpcenter3_adobespark.jpg");
+  image-resolution: 1.5;
+
+  /*
   background-repeat: no-repeat;
   background-size: 600px 600px;
   margin-top: 20px;
@@ -15,14 +18,16 @@
   box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);*/
 
   font-size: 25px;
-  width: 300px;
-  height: 100px;
+  width: 1250px;
+  height: 450px;
   flex: 1;
   margin: 0px 20px;
-  margin-top: 30px;
+  margin-top: 100px;
+  margin: auto;
+  align-self: flex-start;
   padding: 30px;
   border-radius: 10px;
-  background-color: rgb(242, 245, 241);
+  background-color: rgb(194, 183, 183);
   cursor: pointer;
   -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
@@ -30,6 +35,12 @@
 .helpwelcom {
   padding: 0%;
   flex: 1;
+  margin-bottom: 50px;
+  font-size: 70px;
+}
+
+.hlpimage {
+  background-image: url("../../../assests/helpcenterhome.jpg");
 }
 
 .helpbtnsubmit {
@@ -37,4 +48,22 @@
   margin-left: 700px;
   width: 400px;
   margin-top: 20px;
+  border-radius: 20px;
+}
+
+.helpbtnsubmit:hover {
+  background-color: brown;
+  color: white;
+  background-color: crimson;
+
+  border-color: rgb(83, 220, 20);
+  border: 2px solid var(--primary);
+}
+
+.upperdiv {
+  flex: 1;
+  margin: 0px 0px;
+  width: 1350px;
+  height: 100px;
+  background-color: rgb(255, 255, 255);
 }
