--- a/src/components/css/moderator/FaQ.css
+++ b/src/components/css/moderator/FaQ.css
@@ -4,15 +4,23 @@
 
 .div1 {
     background-color: aqua;
-    display: inline-block;
+  
 }
 
 .div2 {
     background-color: aliceblue;
-    display: inline-block;
+   
 }
 
 .div3 {
     background-color: bisque;
-    display: inline-block;
+    
+}
+
+
+.oneline{
+    display: table-cell;
+    margin-block-end: 50px;
+    height: 600px;
+   
 }
