--- a/src/components/css/moderator/FaQ.css
+++ b/src/components/css/moderator/FaQ.css
@@ -4,23 +4,37 @@
 
 .div1 {
     background-color: aqua;
+    margin-left: 20px;
   
 }
 
 .div2 {
-    background-color: aliceblue;
+    background-color: rgb(235, 231, 233);
+    width: 1000;
+    
    
 }
 
 .div3 {
     background-color: bisque;
+    margin-left: 20px;
+    width: 100px;
     
 }
 
 
 .oneline{
     display: table-cell;
-    margin-block-end: 50px;
+    
     height: 600px;
+    padding-left: 20px;
+    justify-content: space-between;    
+    margin-left: 5px;
+    border: 20px;
    
+   
+}
+
+.h1-content-before {
+    
 }
