--- a/src/components/css/moderator/FaQ.css
+++ b/src/components/css/moderator/FaQ.css
@@ -3,7 +3,7 @@
 }
 
 .div1 {
-    background-color: aqua;
+    background-color: white(242, 247, 247);
     margin-left: 20px;
     width: 200px;
   
@@ -17,7 +17,7 @@
 }
 
 .div3 {
-    background-color: bisque;
+    background-color: white;
     margin-left: 20px;
     width: 200px;
     
