upto now frequentlu ask questions

--- a/src/components/css/moderator/FaQ.css
+++ b/src/components/css/moderator/FaQ.css
@@ -42,8 +42,10 @@
     
 }
 .imageDiv {
-    background-color: aquamarine;
-    height: 50px;
+    background-color: whitesmoke;
+    height: 300px;
+    margin-right: 20px;
+    margin-top: 20px;
 }
 
 
@@ -52,6 +54,7 @@
 }
 
 .question {
-    margin-top: 20px;
+    margin-top: 30px;
+    margin-bottom: 10px;
 }
 
