--- a/src/components/css/moderator/ItemTable.css
+++ b/src/components/css/moderator/ItemTable.css
@@ -51,7 +51,12 @@
     background-color: rgb(250, 244, 244);
     font-weight: 500;
 }
-
+.update-btn {
+    background-color: rgb(120, 230, 120);
+    border-radius: 5px;
+    width: 70px;
+    height: 40px;
+} 
 
 
 
